<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/background_blue"
    tools:context="com.cs1635.classme.NewCourse$PlaceholderFragment" >

    <TextView
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:text="@string/name"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/instr"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/cname"
        android:layout_below="@+id/cname"
        android:layout_marginTop="14dp"
        android:text="@string/instr"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <EditText
        android:id="@+id/cname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/name"
        android:layout_below="@+id/name"
        android:layout_marginTop="14dp"
        android:ems="10"
        android:hint="@string/cnhints"
        android:inputType="none" >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/cinstr"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/instr"
        android:layout_below="@+id/instr"
        android:ems="10"
        android:inputType="none" />

    <TextView
        android:id="@+id/section"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/cinstr"
        android:layout_below="@+id/cinstr"
        android:layout_marginTop="16dp"
        android:text="@string/section"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <EditText
        android:id="@+id/csection"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_centerVertical="true"
        android:ems="10"
        android:inputType="number" />

    <TextView
        android:id="@+id/info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/csection"
        android:layout_below="@+id/csection"
        android:layout_marginTop="15dp"
        android:text="@string/info"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <EditText
        android:id="@+id/cinfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/info"
        android:ems="10"
        android:inputType="textMultiLine" />

</RelativeLayout>
